# opal

./: .gitignore  check_prerequisites.py  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py
docs/: index.html  sitemap.xml
docs/reference/base-parser/: index.html
docs/search/: search_index.json
docs/user-guide/cli-reference/: index.html
docs/user-guide/parsers/: index.html
docs/user-guide/parsers/ParserAppealsAL/: index.html
docs/user-guide/understanding-errors/: index.html
docs_source/: index.md
docs_source/reference/: base-parser.md
docs_source/user-guide/: cli-reference.md  understanding-errors.md
docs_source/user-guide/parsers/: ParserAppealsAL.md  index.md
opal/: parser_module.py
opal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
