[project]
name = "opal"
version = "0.1.0"
description = "OPAL - Oppositional Positions in Alabama: Web scraper for Alabama news sites and court records"
authors = [
    {name = "Gabriel Cabán Cubero", email = "gabri@alforward.org"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocs-autorefs"
]

[project.scripts]
opal = "opal.main:main"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
