[project]
name = "opal"
version = "0.1.0"
description = "OPAL - Oppositional Positions in Alabama: Web scraper for Alabama news sites and court records"
authors = [
    {name = "Gabriel Cabán Cubero", email = "gabri@alforward.org"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["news", "parser", "web-scraping", "court-records", "alabama"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/alabamaforward/opal"
Repository = "https://github.com/alabamaforward/opal"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocs-autorefs"
]

[project.scripts]
opal = "opal.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["opal"]
